--- a/Spotify/app.config
+++ b/Spotify/app.config
@@ -20,4 +20,4 @@
             <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
         </sharedListeners>
     </system.diagnostics>
-<startup><supportedRuntime version="v2.0.50727" sku="Client"/></startup></configuration>
+<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
