--- a/EZBlocker/EZBlocker/App.config
+++ b/EZBlocker/EZBlocker/App.config
@@ -1,6 +1,24 @@
 <?xml version="1.0"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="EZBlocker.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         
     <supportedRuntime version="v2.0.50727"/></startup>
+    <userSettings>
+        <EZBlocker.Properties.Settings>
+            <setting name="UID" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AutoAdd" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Notifications" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </EZBlocker.Properties.Settings>
+    </userSettings>
 </configuration>
