Settings update on upgrade

--- a/EZBlocker/EZBlocker/App.config
+++ b/EZBlocker/EZBlocker/App.config
@@ -19,6 +19,9 @@
             <setting name="Notifications" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="UpdateSettings" serializeAs="String">
+                <value>True</value>
+            </setting>
         </EZBlocker.Properties.Settings>
     </userSettings>
 </configuration>
