--- a/EZBlocker/EZBlocker/Properties/Settings.settings
+++ b/EZBlocker/EZBlocker/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="Notifications" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="UpdateSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
