Add system muting option

--- a/EZBlocker/EZBlocker/App.config
+++ b/EZBlocker/EZBlocker/App.config
@@ -22,6 +22,9 @@
             <setting name="UpdateSettings" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="SpotifyMute" serializeAs="String">
+                <value>False</value>
+            </setting>
         </EZBlocker.Properties.Settings>
     </userSettings>
 </configuration>
