--- a/EZBlocker/EZBlocker/EZBlocker.csproj
+++ b/EZBlocker/EZBlocker/EZBlocker.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpotifyAnswer.cs" />
+    <Compile Include="AudioUtilities.cs" />
+    <Compile Include="Volume.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
