Fix for Spotify muting on Windows 7

--- a/EZBlocker/EZBlocker/App.config
+++ b/EZBlocker/EZBlocker/App.config
@@ -23,7 +23,7 @@
                 <value>True</value>
             </setting>
             <setting name="SpotifyMute" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </EZBlocker.Properties.Settings>
     </userSettings>
