--- a/EZBlocker/EZBlocker/EZBlocker.csproj
+++ b/EZBlocker/EZBlocker/EZBlocker.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Blocklist.Designer.cs">
       <DependentUpon>Blocklist.cs</DependentUpon>
     </Compile>
+    <Compile Include="WindowUtilities.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
