--- a/EZBlocker/EZBlocker/EZBlocker.csproj
+++ b/EZBlocker/EZBlocker/EZBlocker.csproj
@@ -62,10 +62,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Resources\CoreAudio.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>Resources\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -84,6 +83,9 @@
     <Compile Include="Blocklist.Designer.cs">
       <DependentUpon>Blocklist.cs</DependentUpon>
     </Compile>
+    <Compile Include="Json\CSRF.cs" />
+    <Compile Include="Json\OAuth.cs" />
+    <Compile Include="WebHelperHook.cs" />
     <Compile Include="WindowUtilities.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -91,10 +93,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="ITunesAnswer.cs" />
+    <Compile Include="Json\ITunesAnswer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpotifyAnswer.cs" />
+    <Compile Include="Json\SpotifyAnswer.cs" />
     <EmbeddedResource Include="Blocklist.resx">
       <DependentUpon>Blocklist.cs</DependentUpon>
     </EmbeddedResource>
@@ -127,8 +129,8 @@
   <ItemGroup>
     <Content Include="my_music.ico" />
     <Content Include="Resources\CoreAudio.dll" />
+    <Content Include="Resources\Newtonsoft.Json.dll" />
     <None Include="Resources\nircmd32.exe" />
-    <None Include="Resources\Newtonsoft.Json.dll" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -141,6 +143,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
