Add minimize on exit and minimize on start options
disabled by default - opt-in

--- a/EZBlocker/EZBlocker/App.config
+++ b/EZBlocker/EZBlocker/App.config
@@ -19,6 +19,12 @@
             <setting name="SpotifyMute" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="MinimizeOnClose" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="StartMinimized" serializeAs="String">
+                <value>False</value>
+            </setting>
         </EZBlocker.Properties.Settings>
     </userSettings>
 </configuration>
