--- a/SpotifyMuter/SpotifyMuter/SpotifyMuter.csproj
+++ b/SpotifyMuter/SpotifyMuter/SpotifyMuter.csproj
@@ -97,6 +97,7 @@
     <Compile Include="TimedWebClient.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="WebhelperEnabler.cs" />
     <Compile Include="WebHelperHook.cs" />
     <Compile Include="WebHelperResult.cs" />
     <Compile Include="Form1.cs">
