--- a/SpotifyMuter/SpotifyMuter/SpotifyMuter.csproj
+++ b/SpotifyMuter/SpotifyMuter/SpotifyMuter.csproj
@@ -91,15 +91,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArtistResource.cs" />
     <Compile Include="Json\CSRF.cs" />
     <Compile Include="Json\OAuth.cs" />
+    <Compile Include="Json\TrackResource.cs" />
     <Compile Include="NlogConfiguration.cs" />
+    <Compile Include="Json\OpenGraphState.cs" />
     <Compile Include="TimedWebClient.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Json\Track.cs" />
     <Compile Include="WebhelperEnabler.cs" />
     <Compile Include="WebHelperHook.cs" />
-    <Compile Include="WebHelperResult.cs" />
+    <Compile Include="Json\SpotifyStatus.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
