--- a/SpotifyMuter/SpotifyMuter/SpotifyMuter.csproj
+++ b/SpotifyMuter/SpotifyMuter/SpotifyMuter.csproj
@@ -82,16 +82,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArtistResource.cs" />
+    <Compile Include="Json\ArtistResource.cs" />
     <Compile Include="Json\CSRF.cs" />
     <Compile Include="Json\OAuth.cs" />
     <Compile Include="Json\TrackResource.cs" />
@@ -112,8 +107,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Json\SpotifyAnswer.cs" />
-    <Compile Include="WindowUtilities.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
