--- a/SpotifyMuter/src/SpotifyMuter/SpotifyMuter.csproj
+++ b/SpotifyMuter/src/SpotifyMuter/SpotifyMuter.csproj
@@ -90,8 +90,9 @@
     <Compile Include="NlogConfiguration.cs" />
     <Compile Include="ResumeMessageSender.cs" />
     <Compile Include="SpotifyMuter.cs" />
+    <Compile Include="SpotifyWebHelperStarter.cs" />
     <Compile Include="UrlBuilder.cs" />
-    <Compile Include="WebhelperEnabler.cs" />
+    <Compile Include="SpotifyWebHelperEnabler.cs" />
     <Compile Include="WebHelperHook.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
