--- a/SpotifyMuter/src/Model/packages.config
+++ b/SpotifyMuter/src/Model/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Anotar.NLog.Fody" version="3.0.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Fody" version="1.29.4" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
+  <package id="NLog" version="4.3.3" targetFramework="net461" />
 </packages>
