--- a/SpotifyMuter/src/SpotifyMuter/SpotifyMuter.csproj
+++ b/SpotifyMuter/src/SpotifyMuter/SpotifyMuter.csproj
@@ -72,10 +72,6 @@
       <HintPath>..\..\packages\AudioSwitcher.AudioApi.CoreAudio.3.0.0.1\lib\net40\AudioSwitcher.AudioApi.CoreAudio.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NLog.4.3.3\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
@@ -86,14 +82,9 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JsonPageLoader.cs" />
     <Compile Include="NlogConfiguration.cs" />
     <Compile Include="SpotifyMuter.cs" />
     <Compile Include="SpotifyStatusProcessor.cs" />
-    <Compile Include="SpotifyWebHelperStarter.cs" />
-    <Compile Include="UrlBuilder.cs" />
-    <Compile Include="SpotifyWebHelperEnabler.cs" />
-    <Compile Include="WebHelperHook.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +131,10 @@
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{1B49E4E4-BEDE-4AF7-B7B8-3FA765A83D8A}</Project>
       <Name>Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SpotifyWebHelper\SpotifyWebHelper.csproj">
+      <Project>{6b02d4d5-e16c-4b73-91a3-52b6347c44e6}</Project>
+      <Name>SpotifyWebHelper</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
