--- a/EZBlocker/EZBlocker/App.config
+++ b/EZBlocker/EZBlocker/App.config
@@ -11,13 +11,16 @@
     <userSettings>
         <EZBlocker.Properties.Settings>
             <setting name="UID" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="UpdateSettings" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="SpotifyMute" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="UserEducated" serializeAs="String">
+                <value>False</value>
             </setting>
         </EZBlocker.Properties.Settings>
     </userSettings>
