--- a/SpotifyMuter/src/Utilities/Utilities.csproj
+++ b/SpotifyMuter/src/Utilities/Utilities.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\JsonPageLoadingFailedException.cs" />
     <Compile Include="JsonPageLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UrlBuilder.cs" />
