Adde OpenCover and ReportGenerator to Tests.Model and added a batch file to run it.

--- a/SpotifyMuter/src/Tests/Tests.Model/packages.config
+++ b/SpotifyMuter/src/Tests/Tests.Model/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="codecracker.CSharp" version="1.0.0" targetFramework="net461" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net461" />
+  <package id="ReportGenerator" version="2.4.5.0" targetFramework="net461" />
 </packages>
