--- a/SpotifyMuter/src/Model/Model.csproj
+++ b/SpotifyMuter/src/Model/Model.csproj
@@ -41,7 +41,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NLog.4.3.4\lib\net45\NLog.dll</HintPath>
+      <HintPath>..\..\packages\NLog.4.3.5\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -52,6 +52,8 @@
     <Compile Include="Csrf.cs" />
     <Compile Include="Error.cs" />
     <Compile Include="ErrorContainer.cs" />
+    <Compile Include="IErrorContainer.cs" />
+    <Compile Include="ISpotifyStatus.cs" />
     <Compile Include="OAuth.cs" />
     <Compile Include="OpenGraphState.cs" />
     <Compile Include="SpotifyStatus.cs" />
